--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is Home Page</h1>
-    <a href="./about.html">Click here for about htm</a>
+    <a href="./about.html">Click here for about</a>
     <a href="./services.html">Click here for services</a>
     
 </body>
