--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>INDEX</title>
 </head>
 <body>
-    <h1>This is Home Page</h1>
+    <h1>Hey Pavi Epdi irukka.... </h1>
+    <hr>
+    <Mass the Cute guy>
     <a href="./about.html">Click here for about</a>
     <a href="./services.html">Click here for services</a>
     
