--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hey Pavi Epdi irukka.... </h1>
     <hr>
-    <Mass the Cute guy>
+    <p>Mass the Cute guy</p>
     <a href="./about.html">Click here for about</a>
     <a href="./services.html">Click here for services</a>
     
