--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>INDEX</title>
 </head>
 <body>
-    <h1>Hey Pavi Epdi irukka.... </h1>
+    <h1>Welcome,</h1>
     <hr>
-    <p>Mass the Cute guy</p>
+    <p>This is test site</p>
     <a href="./about.html">Click here for about</a>
     <a href="./services.html">Click here for services</a>
     
