--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="https://dakshinapersonalsite.online/assets/img/favicon.png" rel="icon">
-  <link href="https://dakshinapersonalsite.online/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://jobprofile.website/assets/img/favicon.png" rel="icon">
+  <link href="https://jobprofile.website/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="https://dakshinapersonalsite.online/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="https://dakshinapersonalsite.online/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://dakshinapersonalsite.online/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://dakshinapersonalsite.online/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="https://dakshinapersonalsite.online/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="https://dakshinapersonalsite.online/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://jobprofile.website/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://jobprofile.website/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://jobprofile.website/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://jobprofile.website/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://jobprofile.website/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://jobprofile.website/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://dakshinapersonalsite.online/assets/css/style.css" rel="stylesheet">
+  <link href="https://jobprofile.website/assets/css/style.css" rel="stylesheet">
 
   <!-- Script to send email -->
 
-  <script src="https://dakshinapersonalsite.online/assets/js/smtp.js"></script>
+  <script src="https://jobprofile.website/assets/js/smtp.js"></script>
 
   <!-- =======================================================
   * Template Name: MyResume
