--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="http://jobprofile.website/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="http://jobprofile.website/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="http://jobprofile.website/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="http://jobprofile.website/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="http://jobprofile.website/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="http://jobprofile.website/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="*/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="*/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="*/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="*/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="*/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="*/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="http://jobprofile.website/assets/css/style.css" rel="stylesheet">
+  <link href="*/assets/css/style.css" rel="stylesheet">
 
   <!-- Script to send email -->
 
-  <script src="http://jobprofile.website/assets/js/smtp.js"></script>
+  <script src="*/assets/js/smtp.js"></script>
 
   <!-- =======================================================
   * Template Name: MyResume
@@ -453,7 +453,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="https://dakshinapersonalsite.online/assets/js/main.js"></script>
+  <script src="*/assets/js/main.js"></script>
  
 </body>
 
